fixed spacing

--- a/scss/components/list.scss
+++ b/scss/components/list.scss
@@ -1,7 +1,7 @@
 ul.feature-lists {
   padding-left: 100px;
   color: $mint;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   padding-right: 60px;
   li {
     font-size: 14px;
@@ -13,7 +13,6 @@ ul.feature-lists {
   font-size: 20px;
   text-align: center;
   font-weight: 700;
-  margin-top: 15px;
   a {
     text-decoration: underline;
     color: black;
