--- a/scss/pages/page3.scss
+++ b/scss/pages/page3.scss
@@ -3,7 +3,7 @@
     margin-left: 50px;
     margin-top: 30px;
     margin-bottom: 25px;
-    padding-right: 50px;
+    padding-right: 60px;
     font-size: 16px;
     font-weight: 400;
     strong {
