--- a/scss/pages/page4.scss
+++ b/scss/pages/page4.scss
@@ -17,13 +17,14 @@
     margin-left: 50px;
     p {
       padding-left: 20px;
-      padding-right: 30px;
+      padding-right: 20px;
       margin: 0;
       margin-bottom: 8px;
+      font-size: 14px;
     }
   }
   &__header-text {
-    font-size: 32px;
+    font-size: 30px;
     line-height: 1.5;
     font-weight: 700;
   }
