--- a/scss/pages/page5.scss
+++ b/scss/pages/page5.scss
@@ -3,8 +3,7 @@
     margin-bottom: 10px;
   }
   .width--80 {
-    width: 80%;
-    margin: 0 auto;
+    margin-left: 20px;
     line-height: 1.5;
     font-weight: 400;
   }
@@ -36,7 +35,6 @@
           font-size: 40px;
           font-weight: 900;
           line-height: 2;
-          margin-bottom: 10px;
           text-align: left;
         }
         &__subtitle {
@@ -51,7 +49,7 @@
       }
       &__right {
         width: 70%;
-        padding: 0 20px;
+        padding: 0 12px;
         padding-bottom: 20px;
         display: flex;
         justify-content: space-evenly;
@@ -65,8 +63,7 @@
           margin-bottom: 5px;
           h3 {
             font-size: 14px;
-            line-height: 1.4;
-            padding-right: 10px;
+            line-height: 1.2;
           }
           p {
             font-size: 10px;
