--- a/scss/pages/page7.scss
+++ b/scss/pages/page7.scss
@@ -40,7 +40,7 @@
         &__cell {
           width: 20%;
           padding: 0 10px;
-          padding-bottom: 20px;
+          padding-bottom: 30px;
 
           &.narrow {
             width: 15%;
